# ThePlazza

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Error.hpp  Pizza.hpp  Reception.hpp
src/: Error.cpp  Pizza.cpp  Reception.cpp
